Fri Jun 17 19:09:56 UTC 2005  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/be/be_codegen.cpp:
        
          Reverted the change of
          
          Thu Jun 16 18:54:01 UTC 2005  Jeff Parsons <j.parsons@vanderbilt.edu>

          It seems this problem is appearing in other places besides
          generated code, and that making lots of modifications to
          TAO code to work around what is essentially an HP compiler 
          bug is not the right approach. Thanks to Johnny Willemsen
          <jwillemsen@remedy.nl> for advice on this matter.

Fri Jun 17 17:58:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/ORB.cpp:
          Fixed resolve_initial_references of the CodecFactory

Fri Jun 17 12:31:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/PI_Server/*:
          First commit of the PI_Server library. Will contain the parts
          of the PortableServer that are dependent on PortableInterceptors.
          These files will be used soon when the MPC files are updated

Fri Jun 17 11:46:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/DLL_ORB/client.cpp:
          Fixed process_directive call

Fri Jun 17 09:56:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/ORB.cpp:
          Corrected wrong compare in resolve_initial_references

Fri Jun 17 09:50:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Param_Test/Param_Test.mpc:
          Added explicit after so that we don't compile the same idl file
          at the same time multiple times

Fri Jun 17 09:24:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/ORB.{h,cpp}:
          Removed some unneeded emulated exeption macros

Fri Jun 17 09:20:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Nested_Upcall_Crash/Nested_Upcall_Crash.mpc:
          Fixed typo in exename, wanted to commit this yesterday but couldn't
          reach cvs
