@@ -1,30 +1,0 @@
-#include "..\..\tao\Version.h"
-
-1 VERSIONINFO
- FILEVERSION TAO_MAJOR_VERSION,TAO_MINOR_VERSION,TAO_BETA_VERSION,0
- PRODUCTVERSION TAO_MAJOR_VERSION,TAO_MINOR_VERSION,TAO_BETA_VERSION,0
- FILEFLAGSMASK 0x3fL
- FILEFLAGS 0x0L
- FILEOS 0x4L
- FILETYPE 0x1L
- FILESUBTYPE 0x0L
-BEGIN
-    BLOCK "StringFileInfo"
-    BEGIN
-        BLOCK "040904B0"
-        BEGIN
-            VALUE "FileDescription", "ORBSVCS\0"
-            VALUE "FileVersion", TAO_VERSION "\0"
-            VALUE "InternalName", "ORBSVCSDLL\0"
-            VALUE "LegalCopyright", "\0"
-            VALUE "LegalTrademarks", "\0"
-            VALUE "OriginalFilename", "ORBSVCS.DLL\0"
-            VALUE "ProductName", "ORBSVCS\0"
-            VALUE "ProductVersion", TAO_VERSION "\0"
-        END
-    END
-    BLOCK "VarFileInfo"
-    BEGIN
-        VALUE "Translation", 0x409, 1200
-    END
-END
